--- a/CeylonWellness.Web/Views/Form/Steps/_MeatPref.cshtml
+++ b/CeylonWellness.Web/Views/Form/Steps/_MeatPref.cshtml
@@ -3,7 +3,7 @@
 
 <div class="container container-width">
     <div class="d-flex flex-column align-items-center">
-        <h2 class="text-primary mt-3">Do you have any barriers to follow a diet plan?</h2>
+        <h2 class="text-primary mt-3">What is your meat type preference</h2>
         <p class="text-primary mb-5">Select which apply</p>
 
         <a class="btn btn-outline-primary gender-btn txt" onclick="selectBarriers(this)">Chicken</a>
@@ -14,7 +14,6 @@
         <a class="btn btn-outline-primary gender-btn txt padd" onclick="selectBarriers(this)">
             <span class="goal-title">Other Sea Food<br /><span class="goal-subtitle">(crabs, shrimp, cuttle fish, oyster, lobster)</span></span>
         </a>
-        <a class="btn btn-outline-primary gender-btn txt barrier" onclick="selectBarriers(this)">Other</a>
 
         <button class="cl btn btn-primary mt-5 set-bottom" type="button" onclick="loadNextStep('Steps/_ActivityLevel')">Continue</button>
     </div>
