--- a/CeylonWellness.Web/Views/Form/FormStepPlaceholder.cshtml
+++ b/CeylonWellness.Web/Views/Form/FormStepPlaceholder.cshtml
@@ -16,7 +16,10 @@
     <input type="hidden" asp-for="TargetWeight" name="TargetWeight" id="TargetWeight" />
     <input type="hidden" asp-for="ActivityLevel" name="ActivityLevel" id="ActivityLevel" /> *@
     <input type="hidden" name="goal" id="goals" />
-    <input type="hidden" id="bmi" />
+    <input type="hidden" id="weightss" />
+    <input type="hidden" asp-for="BMI" id="bmi" />
+
+    <input type="hidden" id="activelevel" />
 
 </form>
 
