--- a/CeylonWellness.Web/Views/Form/Steps/_heightWeight.cshtml
+++ b/CeylonWellness.Web/Views/Form/Steps/_heightWeight.cshtml
@@ -3,7 +3,7 @@
 
 <div class="container container-width">
     <div class="d-flex flex-column align-items-center">
-        <h2 class="text-primary mt-3 mb-5">What is your weight and weight</h2>
+        <h2 class="text-primary mt-3 mb-5">What is your height and weight?</h2>
 
         <label for="height" class="form-label text-primary">Height (Cm)</label>
         <input asp-for="Height" type="number" id="height" class="form-control big-input mb-4" required />
