--- a/CeylonWellness.Web/Views/Form/Steps/_SelectAge.cshtml
+++ b/CeylonWellness.Web/Views/Form/Steps/_SelectAge.cshtml
@@ -39,7 +39,25 @@
                 </div>
             </div>
         </div>
+        @* <div class="col-md-15">
+            <div class="row">
+                <div class="col-md-4">
+                    <button type="button" onclick="loadNextStep('Steps/_SelectGender')" class="btn btn-secondary btn-lg btn-block">Previous</button>
+                </div>
+                <div class="col-md-4">
+                    <button type="button" onclick="loadNextStep('Steps/_SelectGoal')" class="btn btn-primary btn-lg btn-block">Continue</button>
+                </div>
+            </div>
+        </div> *@
+        <div class="d-flex justify-content-center">
+            <div class="d-flex">
+                <button type="button" onclick="loadNextStep('Steps/_SelectGender')" class="btn btn-secondary btn-lg mx-2">Previous</button>
+                <button type="button" onclick="loadNextStep('Steps/_SelectGoal')" class="btn btn-primary btn-lg mx-2">Continue</button>
+            </div>
+        </div> 
+        
         <p class="text-muted mt-5" style="font-weight:100; font-size:12px;">By continuing, you confirm and guarantee that you have read, understood, and agreed to our <u>Terms of Use</u> and <u>Privacy Notice</u></p>
     </div>
 </div>
+
 
