--- a/CeylonWellness.Web/Views/Form/Steps/_SelectGender.cshtml
+++ b/CeylonWellness.Web/Views/Form/Steps/_SelectGender.cshtml
@@ -14,4 +14,21 @@
             <i class="fas fa-venus"></i>
         </button>
     </div>
+    @* <div class="d-flex justify-content-center">
+        <div class="row">
+            <div class="col-md-7">
+                <button type="button" onclick="loadNextStep('Steps/_SelectGender')" class="btn btn-secondary btn-lg btn-block">Previous</button>
+            </div>
+            <div class="col-md-7">
+                <button type="button" onclick="loadNextStep('Steps/_SelectGoal')" class="btn btn-primary btn-lg btn-block">Continue</button>
+            </div>
+        </div>
+    </div> *@
+    <div class="d-flex justify-content-center fixed-bottom mb-12">
+        <div class="d-flex">
+            <button type="cl btn btn-primary mt-5 set-bottom" onclick="loadNextStep('Steps/_SelectAge')" class="btn btn-secondary btn-lg mx-2">Previous</button>
+            <button type="cl btn btn-primary mt-5 set-bottom" onclick="loadNextStep('Steps/_SelectGoal')" class="btn btn-primary btn-lg mx-2">Continue</button>
+        </div>
+    </div>
+
 </div>
