--- a/CeylonWellness.Web/Views/Form/Steps/_SelectGender.cshtml
+++ b/CeylonWellness.Web/Views/Form/Steps/_SelectGender.cshtml
@@ -1,6 +1,22 @@
 ﻿@model CeylonWellness.Web.Models.MultiStepFormViewModel
 
 
+@* <div class="container">
+    <div class="col-12 col-md-12 text-center">
+        <input type="hidden" id="gender" asp-for="Gender" />
+        <h2 class="text-primary mt-3 mb-5">Select your Gender</h2>
+        <button class="btn btn-outline-primary gender-btn" type="button" id="male-btn" value="Male" data-mdb-ripple-init data-mdb-ripple-color="dark" onclick="setGender('Male', false)">
+            <span>Male</span>
+            <i class="fas fa-mars"></i>
+        </button>
+        <button class="btn btn-outline-primary gender-btn" type="button" id="female-btn" value="Female" data-mdb-ripple-init data-mdb-ripple-color="dark" onclick="setGender('Female', true)">
+            <span>Female</span>
+            <i class="fas fa-venus"></i>
+        </button>
+    </div>
+    
+</div>
+ *@
 <div class="container">
     <div class="col-12 col-md-12 text-center">
         <input type="hidden" id="gender" asp-for="Gender" />
@@ -14,21 +30,4 @@
             <i class="fas fa-venus"></i>
         </button>
     </div>
-    @* <div class="d-flex justify-content-center">
-        <div class="row">
-            <div class="col-md-7">
-                <button type="button" onclick="loadNextStep('Steps/_SelectGender')" class="btn btn-secondary btn-lg btn-block">Previous</button>
-            </div>
-            <div class="col-md-7">
-                <button type="button" onclick="loadNextStep('Steps/_SelectGoal')" class="btn btn-primary btn-lg btn-block">Continue</button>
-            </div>
-        </div>
-    </div> *@
-    <div class="d-flex justify-content-center fixed-bottom mb-12">
-        <div class="d-flex">
-            <button type="cl btn btn-primary mt-5 set-bottom" onclick="loadNextStep('Steps/_SelectAge')" class="btn btn-secondary btn-lg mx-2">Previous</button>
-            <button type="cl btn btn-primary mt-5 set-bottom" onclick="loadNextStep('Steps/_SelectGoal')" class="btn btn-primary btn-lg mx-2">Continue</button>
-        </div>
-    </div>
-
 </div>
