--- a/CeylonWellness.Web/Views/Form/Steps/_heightWeight.cshtml
+++ b/CeylonWellness.Web/Views/Form/Steps/_heightWeight.cshtml
@@ -10,9 +10,14 @@
 
         <label for="weight" class="form-label text-primary">Weight (Kg)</label>
         <input asp-for="Weight" type="number" id="weight" class="form-control big-input" required />
+        @* <div id="weight-group" style="display: none;">
+            <label for="weight" class="form-label text-primary">Weight (Kg)</label>
+            <input asp-for="Weight" type="number" id="weight" class="form-control big-input" required />
+        </div> *@
 
         <p class="notice mt-5"><strong>Note: </strong>Capturing your weight and height allows us to calculate your Body Mass Index (BMI). BMI is an important indicator used to assess whether you are underweight, normal weight, overweight, or obese, which helps in understanding your overall health status.</p>
-        <button class="cl btn btn-primary mt-5 set-bottom" type="button" onclick="WHVerification('Steps/_SelectGoal')">Continue</button>
+        <button class="cl btn btn-primary mt-5 set-bottom" type="button" onclick="WHVerification('Steps/_SetBodyMeasurements')">Continue</button>
 
     </div>
 </div>
+@* <script src="~/js/genderSelection.js"></script> *@
