--- a/CeylonWellness.Web/Views/Form/Steps/_MeatPref.cshtml
+++ b/CeylonWellness.Web/Views/Form/Steps/_MeatPref.cshtml
@@ -3,7 +3,7 @@
 
 <div class="container container-width">
     <div class="d-flex flex-column align-items-center">
-        <h2 class="text-primary mt-3">What is your meat type preference</h2>
+        <h2 class="text-primary mt-3">What meats do you usually eat?</h2>
         <p class="text-primary mb-5">Select which apply</p>
 
         <a class="btn btn-outline-primary gender-btn txt" onclick="selectBarriers(this)">Chicken</a>
