--- a/CeylonWellness.Web/Views/Form/Steps/_SelectBarrier.cshtml
+++ b/CeylonWellness.Web/Views/Form/Steps/_SelectBarrier.cshtml
@@ -3,7 +3,7 @@
 
 <div class="container container-width">
     <div class="d-flex flex-column align-items-center">
-        <h2 class="text-primary mt-3">Do you have any barriers to follow a diet plan?</h2>
+        <h2 class="text-primary mt-3">Any difficulties following a diet?</h2>
         <p class="text-primary mb-5">Select which apply</p>
 
         <a class="btn btn-outline-primary gender-btn txt barrier" onclick="selectBarriers(this)">Lack of motivation</a>
