changes & additional pages

--- a/CeylonWellness.Web/Views/Form/Steps/_MeatPref.cshtml
+++ b/CeylonWellness.Web/Views/Form/Steps/_MeatPref.cshtml
@@ -15,6 +15,6 @@
             <span class="goal-title">Other Sea Food<br /><span class="goal-subtitle">(crabs, shrimp, cuttle fish, oyster, lobster)</span></span>
         </a>
 
-        <button class="cl btn btn-primary mt-5 set-bottom" type="button" onclick="loadNextStep('Steps/_ActivityLevel')">Continue</button>
+        <button class="cl btn btn-primary mt-5 set-bottom" type="button" onclick="loadNextStep('Steps/_DairyProductsEggs')">Continue</button>
     </div>
 </div>
