--- a/CeylonWellness.Web/Views/Form/Steps/_DairyProductsEggs.cshtml
+++ b/CeylonWellness.Web/Views/Form/Steps/_DairyProductsEggs.cshtml
@@ -1,37 +1,35 @@
 ﻿@model CeylonWellness.Web.Models.MultiStepFormViewModel
+<div class="container">
+    <!-- Dairy Products Question -->
+    <div class="col-12 col-md-12 text-center">
+        <input type="hidden" id="dairy" asp-for="Dairy" />
+        <h2 class="text-primary mt-3 mb-5">Do you take Dairy Products?</h2>
+        <div class="row justify-content-center mb-4">
+            <button class="btn btn-outline-primary dairy-btn col-6 col-md-3 pb-3 text-center" type="button" id="dairy-yes-btn" value="Yes" data-mdb-ripple-init data-mdb-ripple-color="dark" onclick="setDairy('Yes')">
+                <span class="fs-6">Yes</span>
+            </button>
+        </div>
+        <div class="row justify-content-center">
+            <button class="btn btn-outline-primary dairy-btn col-6 col-md-3 pb-3" type="button" id="dairy-no-btn" value="No" data-mdb-ripple-init data-mdb-ripple-color="dark" onclick="setDairy('No')">
+                <span class="fs-6">No</span>
+            </button>
+        </div>
+    </div>
 
-
-
-<div class="container container-width">
-    <div class="d-flex flex-column align-items-center">
-        <h2 class="text-primary mt-3 mb-3">Do you consume Dairy Products?</h2>
-        <input type="hidden" asp-for="goal" id="goal" />
-
-        <a class="btn btn-outline-primary gender-btn selected goal" id="gain" data-goal="Gain Weight" data-mdb-ripple-init data-mdb-ripple-color="dark" onclick="selectGoal(this)">
-            <span class="goal-title">Yes<br /><span class="goal-subtitle">I consume dairy products</span></span>
-        </a>
-
-        <a class="btn btn-outline-primary gender-btn selected goal" id="lose" data-goal="Lose Weight" data-mdb-ripple-init data-mdb-ripple-color="dark" onclick="selectGoal(this)">
-            <span class="goal-title">No<br /><span class="goal-subtitle">I do not consume dairy products</span></span>
-        </a>
-
-        <h2 class="text-primary mt-3 mb-3">Do you consume Eggs?</h2>
-        <input type="hidden" asp-for="goal" id="goal" />
-
-        <a class="btn btn-outline-primary gender-btn selected goal" id="gain" data-goal="Gain Weight" data-mdb-ripple-init data-mdb-ripple-color="dark" onclick="selectGoal(this)">
-            <span class="goal-title">Yes<br /><span class="goal-subtitle">I consume eggs</span></span>
-        </a>
-
-        <a class="btn btn-outline-primary gender-btn selected goal" id="lose" data-goal="Lose Weight" data-mdb-ripple-init data-mdb-ripple-color="dark" onclick="selectGoal(this)">
-            <span class="goal-title">No<br /><span class="goal-subtitle">I do not consume eggs</span></span>    
-        </a>
-
-
-
-        <button class="cl btn btn-primary mb-4 set-bottom" type="button" onclick="TargetWeightVerification('Steps/_ActivityLevel')">Continue</button>
+    <!-- Eggs Question -->
+    <div class="col-12 col-md-12 text-center">
+        <input type="hidden" id="eggs" asp-for="Eggs" />
+        <h2 class="text-primary mt-5 mb-5">Do you eat Eggs?</h2>
+        <div class="row justify-content-center mb-4">
+            <button class="btn btn-outline-primary eggs-btn col-6 col-md-3 pb-3" type="button" id="eggs-yes-btn" value="Yes" data-mdb-ripple-init data-mdb-ripple-color="dark" onclick="setEggs('Yes')">
+                <span class="fs-6">Yes</span>
+            </button>
+        </div>
+        <div class="row justify-content-center">
+            <button class="btn btn-outline-primary eggs-btn col-6 col-md-3 pb-3" type="button" id="eggs-no-btn" value="No" data-mdb-ripple-init data-mdb-ripple-color="dark" onclick="setEggs('No')">
+                <span class="fs-6">No</span>
+            </button>
+        </div>
     </div>
 </div>
-
-
-
-
+<button class="cl btn btn-primary mt-5 set-bottom" type="button" onclick="loadNextStep('Steps/_ActivityLevel')">Continue</button>
