--- a/CeylonWellness.Web/Views/Form/Steps/_SelectDiatpref.cshtml
+++ b/CeylonWellness.Web/Views/Form/Steps/_SelectDiatpref.cshtml
@@ -9,7 +9,8 @@
         @* <a class="btn btn-outline-primary gender-btn txt dietpref" data-pref="Vegan" onclick="selectDiatpref(this)">Vegan</a> *@
         <a class="btn btn-outline-primary gender-btn txt dietpref" data-pref="Vegetarian" onclick="selectDiatpref(this)">Vegetarian</a>
         @* <a class="btn btn-outline-primary gender-btn txt dietpref" data-pref="None" onclick="selectDiatpref(this)">None</a> *@
-
-        <button class="cl btn btn-primary mt-5 set-bottom" type="button" onclick="loadNextStep('Steps/_MeatPref')">Continue</button>
+        <button class="cl btn btn-primary mt-5 set-bottom" type="button" onclick="handleNextStep()">Continue</button>
+        @* <button class="cl btn btn-primary mt-5 set-bottom" type="button" onclick="loadNextStep('Steps/_MeatPref')">Continue</button> *@
     </div>
 </div>
+
