--- a/CeylonWellness.Web/Views/Form/Steps/_SelectAge.cshtml
+++ b/CeylonWellness.Web/Views/Form/Steps/_SelectAge.cshtml
@@ -1,15 +1,5 @@
 ﻿@model CeylonWellness.Web.Models.MultiStepFormViewModel
 
-
-    @* <div class="container-sm container-width">
-        <div class="d-flex flex-column align-items-center">
-            <h3>What is your Age</h3>
-            <input asp-for="Age" type="number" id="Age" class="form-control mt-4 mxwidth" required/>
-            <button class=" cl btn btn-primary mt-5" type="button" onclick="ageVerification('Steps/_SelectGender')">Continue</button>
-        </div>
-    </div> *@
-
-
 <div class="container">
     <div class="row text-center">
         <h5 class="text-primary mb-3">Nutrition Tailored, Budget Friendly</h5>
@@ -39,20 +29,10 @@
                 </div>
             </div>
         </div>
-        @* <div class="col-md-15">
-            <div class="row">
-                <div class="col-md-4">
-                    <button type="button" onclick="loadNextStep('Steps/_SelectGender')" class="btn btn-secondary btn-lg btn-block">Previous</button>
-                </div>
-                <div class="col-md-4">
-                    <button type="button" onclick="loadNextStep('Steps/_SelectGoal')" class="btn btn-primary btn-lg btn-block">Continue</button>
-                </div>
-            </div>
-        </div> *@
         <div class="d-flex justify-content-center">
             <div class="d-flex">
                 <button type="button" onclick="loadNextStep('Steps/_SelectGender')" class="btn btn-secondary btn-lg mx-2">Previous</button>
-                <button type="button" onclick="loadNextStep('Steps/_SelectGoal')" class="btn btn-primary btn-lg mx-2">Continue</button>
+                <button type="button" onclick="ageVerification('Steps/_SelectGender')" class="btn btn-primary btn-lg mx-2">Continue</button>
             </div>
         </div> 
         
