--- a/CeylonWellness.Web/Views/Form/Steps/_SetBodyMeasurements.cshtml
+++ b/CeylonWellness.Web/Views/Form/Steps/_SetBodyMeasurements.cshtml
@@ -15,7 +15,9 @@
 
         </div>
         
-        <p class="notice mt-5"><strong>Note: </strong>Capturing your weight and height allows us to calculate your Body Mass Index (BMI). BMI is an important indicator used to assess whether you are underweight, normal weight, overweight, or obese, which helps in understanding your overall health status.</p>
+        <p class="notice mt-3">
+            <strong>Note: </strong>To accurately calculate body fat percentage, these measurements can help ensure precision and provide the most accurate results.
+        </p>
         <button class="cl btn btn-primary mt-5 set-bottom" type="button" onclick="NWHVerification('Steps/_SelectGoal')">Continue</button>
     </div>
 </div>
