--- a/CeylonWellness.Web/Views/Form/Steps/_SelectGender.cshtml
+++ b/CeylonWellness.Web/Views/Form/Steps/_SelectGender.cshtml
@@ -29,5 +29,6 @@
             <span>Female</span>
             <i class="fas fa-venus"></i>
         </button>
+        <button class="cl btn btn-primary mt-5 set-bottom" type="button" onclick="loadNextStep('Steps/_SelectAge')" class="btn btn-secondary btn-lg mx-2">Previous</button>
     </div>
 </div>
