--- a/CeylonWellness.Web/Views/Form/Steps/_SelectAge.cshtml
+++ b/CeylonWellness.Web/Views/Form/Steps/_SelectAge.cshtml
@@ -32,7 +32,7 @@
         <div class="d-flex justify-content-center">
             <div class="d-flex">
                 <button type="button" onclick="loadNextStep('Steps/_SelectGender')" class="btn btn-secondary btn-lg mx-2">Previous</button>
-                <button type="button" onclick="ageVerification('Steps/_SelectGender')" class="btn btn-primary btn-lg mx-2">Continue</button>
+                @* <button type="button" onclick="ageVerification('Steps/_SelectGender')" class="btn btn-primary btn-lg mx-2">Continue</button> *@
             </div>
         </div> 
         
