--- a/CeylonWellness.Web/Views/Form/Steps/_SelectGoal.cshtml
+++ b/CeylonWellness.Web/Views/Form/Steps/_SelectGoal.cshtml
@@ -36,10 +36,15 @@
                 </div>
             </div>
         </div>
+        <div class="d-flex justify-content-center fixed-bottom mt-5 mb-4">
+            <div class="d-flex">
+                <button type="button" onclick="loadNextStep('Steps/_SetBodyMeasurements')" class="btn btn-secondary btn-lg mx-2">Previous</button>
+                <button type="button" onclick="TargetWeightVerification('Steps/_SelectBarrier')" class="btn btn-primary btn-lg mx-2">Continue</button>
+            </div>
+        </div>
 
 
-
-        <button class="cl btn btn-primary mb-4 set-bottom" type="button" onclick="TargetWeightVerification('Steps/_SelectBarrier')">Continue</button>
+        @* <button class="cl btn btn-primary mb-4 set-bottom" type="button" onclick="TargetWeightVerification('Steps/_SelectBarrier')">Continue</button> *@
     </div>
 </div>
 
