--- a/CeylonWellness.Web/Views/Form/Steps/_heightWeight.cshtml
+++ b/CeylonWellness.Web/Views/Form/Steps/_heightWeight.cshtml
@@ -16,8 +16,13 @@
         </div> *@
 
         <p class="notice mt-5"><strong>Note: </strong>Capturing your weight and height allows us to calculate your Body Mass Index (BMI). BMI is an important indicator used to assess whether you are underweight, normal weight, overweight, or obese, which helps in understanding your overall health status.</p>
-        <button class="cl btn btn-primary mt-5 set-bottom" type="button" onclick="WHVerification('Steps/_SetBodyMeasurements')">Continue</button>
-
+        @* <button class="cl btn btn-primary mt-5 set-bottom" type="button" onclick="WHVerification('Steps/_SetBodyMeasurements')">Continue</button> *@
+        <div class="d-flex justify-content-center fixed-bottom mt-3 mb-5">
+            <div class="d-flex">
+                <button type="button" onclick="loadNextStep('Steps/_SetAge')" class="btn btn-secondary btn-lg mx-2">Previous</button>
+                <button type="button" onclick="WHVerification('Steps/_SetBodyMeasurements')" class="btn btn-primary btn-lg mx-2">Continue</button>
+            </div>
+        </div>
     </div>
 </div>
 @* <script src="~/js/genderSelection.js"></script> *@
