Macro type non vege

--- a/CeylonWellness.Web/Views/Form/Steps/_SelectDiatpref.cshtml
+++ b/CeylonWellness.Web/Views/Form/Steps/_SelectDiatpref.cshtml
@@ -4,7 +4,7 @@
 <div class="container container-width">
     <div class="d-flex flex-column align-items-center">
         <h2 class="text-primary mt-3">Are you vegetarian or non-vegetarian?</h2>
-        <input type="hidden" asp-for="MealPreference" id="Diatpref" />
+        <input type="hidden" asp-for="Diatpref" id="Diatpref" />
         <a class="btn btn-outline-primary gender-btn txt dietpref" data-pref="Non Vegetarian" onclick="selectDiatpref(this)">Non Vegetarian</a>
         @* <a class="btn btn-outline-primary gender-btn txt dietpref" data-pref="Vegan" onclick="selectDiatpref(this)">Vegan</a> *@
         <a class="btn btn-outline-primary gender-btn txt dietpref" data-pref="Vegetarian" onclick="selectDiatpref(this)">Vegetarian</a>
