--- a/CeylonWellness.Web/Views/Form/Steps/_DairyProductsEggs.cshtml
+++ b/CeylonWellness.Web/Views/Form/Steps/_DairyProductsEggs.cshtml
@@ -35,7 +35,7 @@
 <div class="d-flex justify-content-center fixed-bottom mt-4 mb-4">
     <div class="d-flex">
         <button type="button" onclick="loadNextStep('Steps/_SelectDiatpref')" class="btn btn-secondary btn-lg mx-2">Previous</button>
-        <button type="button" onclick="loadNextStep('Steps/_ActivityLevel')" class="btn btn-primary btn-lg mx-2">Continue</button>
+        <button type="button" onclick="handleMacroNextStep()" class="btn btn-primary btn-lg mx-2">Continue</button>
     </div>
 </div>
 @* <button class="cl btn btn-primary mt-5 set-bottom" type="button" onclick="loadNextStep('Steps/_ActivityLevel')">Continue</button> *@
