Meal intake selection

--- a/CeylonWellness.Web/Views/Form/FormStepPlaceholder.cshtml
+++ b/CeylonWellness.Web/Views/Form/FormStepPlaceholder.cshtml
@@ -15,7 +15,7 @@
     <input type="hidden" asp-for="Height" name="Height" id="Height" />
     <input type="hidden" asp-for="TargetWeight" name="TargetWeight" id="TargetWeight" />
     <input type="hidden" asp-for="ActivityLevel" name="ActivityLevel" id="ActivityLevel" /> *@
-    <input type="text" name="goal" id="goals" />
+    <input type="hidden" name="goal" id="goals" />
     <input type="hidden" id="weightss" />
     <input type="hidden" id="Diatprefs" />
     <input type="hidden" asp-for="BMI" id="bmi" />
