--- a/CeylonWellness.Web/Views/Form/Steps/_ActivityLevel.cshtml
+++ b/CeylonWellness.Web/Views/Form/Steps/_ActivityLevel.cshtml
@@ -29,7 +29,7 @@
         @* <button class="cl btn btn-primary mt-5 set-bottom" type="button" onclick="loadNextStep('Steps/_SelectWeekGoal')">Continue</button> *@
         <div class="d-flex justify-content-center fixed-bottom mt-4 mb-4">
             <div class="d-flex">
-                <button type="button" onclick="loadNextStep('Steps/_DairyProductsEggs')" class="btn btn-secondary btn-lg mx-2">Previous</button>
+                <button type="button" onclick="loadNextStep('Steps/_SelectGoal')" class="btn btn-secondary btn-lg mx-2">Previous</button>
                 <button type="button" onclick="loadNextStep('Steps/_SelectWeekGoal')" class="btn btn-primary btn-lg mx-2">Continue</button>
             </div>
         </div>
