--- a/CeylonWellness.Web/Views/Form/Steps/_SelectDiatpref.cshtml
+++ b/CeylonWellness.Web/Views/Form/Steps/_SelectDiatpref.cshtml
@@ -13,7 +13,7 @@
         @* <button class="cl btn btn-primary mt-5 set-bottom" type="button" onclick="loadNextStep('Steps/_MeatPref')">Continue</button> *@
         <div class="d-flex justify-content-center fixed-bottom mt-5 mb-5">
             <div class="d-flex">
-                <button type="button" onclick="loadNextStep('Steps/_SelectBarrier')" class="btn btn-secondary btn-lg mx-2">Previous</button>
+                <button type="button" onclick="loadNextStep('Steps/_SelectWeekGoal')" class="btn btn-secondary btn-lg mx-2">Previous</button>
                 <button type="button" onclick="handleNextStep()" class="btn btn-primary btn-lg mx-2">Continue</button>
             </div>
         </div>
