--- a/CeylonWellness.Web/Views/Form/Steps/_SelectGoal.cshtml
+++ b/CeylonWellness.Web/Views/Form/Steps/_SelectGoal.cshtml
@@ -36,7 +36,7 @@
         <div class="d-flex justify-content-center fixed-bottom mt-5 mb-4">
             <div class="d-flex">
                 <button type="button" onclick="loadNextStep('Steps/_SetBodyMeasurements')" class="btn btn-secondary btn-lg mx-2">Previous</button>
-                <button type="button" onclick="TargetWeightVerification('Steps/_SelectBarrier')" class="btn btn-primary btn-lg mx-2">Continue</button>
+                <button type="button" onclick="loadNextStep('Steps/_ActivityLevel')" class="btn btn-primary btn-lg mx-2">Continue</button>
             </div>
         </div>
 
