--- a/CeylonWellness.Web/Views/Form/Steps/_SelectMacroType.cshtml
+++ b/CeylonWellness.Web/Views/Form/Steps/_SelectMacroType.cshtml
@@ -17,7 +17,7 @@
         <div class="d-flex justify-content-center fixed-bottom mt-5 mb-4">
             <div class="d-flex">
                 <button type="button" onclick="loadNextStep('Steps/_heightWeight')" class="btn btn-secondary btn-lg mx-2">Previous</button>
-                <button type="button" onclick="NWHVerification('Steps/_SelectGoal')" class="btn btn-primary btn-lg mx-2">Continue</button>
+                <button type="button" onclick="loadNextStep('Steps/_SelectMealIntake')" class="btn btn-primary btn-lg mx-2">Continue</button>
             </div>
         </div>
     </div>
