--- a/CeylonWellness.Web/Views/Form/Steps/_SelectMealIntake.cshtml
+++ b/CeylonWellness.Web/Views/Form/Steps/_SelectMealIntake.cshtml
@@ -15,7 +15,7 @@
         <div class="d-flex justify-content-center fixed-bottom mt-5 mb-4">
             <div class="d-flex">
                 <button type="button" onclick="loadNextStep('Steps/_SelectMacroType')" class="btn btn-secondary btn-lg mx-2">Previous</button>
-                <button type="button" onclick="loadNextStep('Steps/_SelectMealIntake')" class="btn btn-primary btn-lg mx-2">Continue</button>
+                <button type="button" onclick="loadNextStep('Steps/_SelectWheyProtien')" class="btn btn-primary btn-lg mx-2">Continue</button>
             </div>
         </div>
     </div>
