--- a/CeylonWellness.Web/Views/Form/FormStepPlaceholder.cshtml
+++ b/CeylonWellness.Web/Views/Form/FormStepPlaceholder.cshtml
@@ -18,7 +18,9 @@
     <input type="hidden" name="goal" id="goals" />
     <input type="hidden" id="weightss" />
     <input type="hidden" id="Diatprefs" />
+    <input type="hidden" id="mealintakeprefs" />
     <input type="hidden" id="wheyproteinprefs" />
+    <input type="hidden" id="macroprefs" />
     <input type="hidden" asp-for="BMI" id="bmi" />
     
     <input type="hidden" id="activelevel" />
