--- a/CeylonWellness.Web/Views/Form/Steps/_SelectMealIntake.cshtml
+++ b/CeylonWellness.Web/Views/Form/Steps/_SelectMealIntake.cshtml
@@ -2,13 +2,14 @@
 
 <div class="container container-width">
     <div class="d-flex flex-column align-items-center">
+        <input type="hidden" asp-for="mealintakepref" id="mealintakepref" />
         <h2 class="text-primary mt-3 mb-4">How many meals would you like to take per day?</h2>
         <div id="mealOptions" class="d-flex flex-column align-items-center mt-4">
-            <button type="button" class="btn btn-outline-primary gender-btn txt mealintakepref twomeal" data-pref="budgetPlan">2 Main Meals</button>
-            <button type="button" class="btn btn-outline-primary gender-btn txt mealintakepref threemeal" data-pref="lowCarb">3 Main Meals</button>
-            <button type="button" class="btn btn-outline-primary gender-btn txt mealintakepref threemealonesnack" data-pref="balanced">3 Main Meals with 1 snack</button>
-            <button type="button" class="btn btn-outline-primary gender-btn txt mealintakepref threemealtwosnack" data-pref="highProtein">3 Main Meals with 2 snacks</button>
-            <button type="button" class="btn btn-outline-primary gender-btn txt mealintakepref threemealthreesnack" data-pref="highProtein">3 Main Meals with 3 snacks</button>
+            <button type="button" class="btn btn-outline-primary gender-btn txt mealintakepref twomeal" data-pref="budgetPlan" onclick="selectMealinpref(this)">2 Main Meals</button>
+            <button type="button" class="btn btn-outline-primary gender-btn txt mealintakepref threemeal" data-pref="lowCarb" onclick="selectMealinpref(this)">3 Main Meals</button>
+            <button type="button" class="btn btn-outline-primary gender-btn txt mealintakepref threemealonesnack" data-pref="balanced" onclick="selectMealinpref(this)">3 Main Meals with 1 snack</button>
+            <button type="button" class="btn btn-outline-primary gender-btn txt mealintakepref threemealtwosnack" data-pref="highProtein" onclick="selectMealinpref(this)">3 Main Meals with 2 snacks</button>
+            <button type="button" class="btn btn-outline-primary gender-btn txt mealintakepref threemealthreesnack" data-pref="highProtein" onclick="selectMealinpref(this)">3 Main Meals with 3 snacks</button>
 
         </div>
 
