--- a/CeylonWellness.Web/Views/Form/Steps/_SelectGoal.cshtml
+++ b/CeylonWellness.Web/Views/Form/Steps/_SelectGoal.cshtml
@@ -24,7 +24,7 @@
 
         <h2 id="hidethis" class="text-primary my-5">What is your target weight?</h2>
         <div class="row justify-content-center">
-            <div class="col-md-12">
+            <div class="col-md-12" id="targetWeightContainer">
                 <div class="input-group mb-8">
                     <input type="number" id="targetweight" class="form-control big-input">
                     <div class="input-group-append">
