--- a/CeylonWellness.Web/Views/Form/FormStepPlaceholder.cshtml
+++ b/CeylonWellness.Web/Views/Form/FormStepPlaceholder.cshtml
@@ -19,6 +19,15 @@
     <input type="hidden" id="weightss" />
     <input type="hidden" asp-for="BMI" id="bmi" />
 
+    @* For TDEE and BMR *@
+    <input type="hidden" id="WeightBMR" />
+    <input type="hidden" id="HeightBMR" />
+    <input type="hidden" id="AgeBMR" />
+    <input type="hidden" id="ActlevelBMR" />
+    <input type="hidden" id="GenderBMR" />
+    <input type="hidden" id="TWeightBMR" />
+    <input type="hidden" id="WeekgoalBMR" />
+
     <input type="hidden" id="activelevel" />
 
 </form>
