--- a/CeylonWellness.Web/Views/Shared/_Layout.cshtml
+++ b/CeylonWellness.Web/Views/Shared/_Layout.cshtml
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - CeylonWellness.Web</title>
+
+    <link rel="icon" type="image/x-icon" href="~/Assets/Logo.svg" />
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
           rel="stylesheet" />
